Fixed image stretching for safari

--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,7 @@ footer{
     padding: 5rem 0;
     text-align: center;
     background-color: #f3f3f3;
+
 }
 footer a{
     margin: 0 10px;
@@ -284,9 +285,9 @@ nav{
 }
 
 .img-2-col{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: inline-block;
+    /* flex-wrap: wrap;
+    justify-content: space-between; */
 }
 .img-2-col img{
     width: 49%;
@@ -324,7 +325,7 @@ nav{
 /* ----------------------------- ABOUT */
 
 #about{
-    padding: 10% 25%;
+    padding: 8% 28%;
     height: 60vh;
 }
 #about h2{
